example/secondfile/objects/MobilitySection__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ANIRA_Pricing__c</fullName>
        <label>ANIRA_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANIRA_Resources_Sales__c</fullName>
        <label>ANIRA_Resources_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANIRA_Resources_Technical__c</fullName>
        <label>ANIRA_Resources_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Developer_Documentation__c</fullName>
        <label>API_Developer_Documentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_Get__c</fullName>
        <label>ASE_Get</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_Pricing__c</fullName>
        <label>ASE_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_Sales__c</fullName>
        <label>ASE_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_Technical__c</fullName>
        <label>ASE_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVPN_Pricing__c</fullName>
        <label>AVPN_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bi_fold__c</fullName>
        <label>Bi_fold</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_IRU_FAN_Request_Sheet__c</fullName>
        <label>Bulk_IRU_FAN_Request_Sheet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLO_Pricing__c</fullName>
        <label>COLO_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLO_Sales__c</fullName>
        <label>COLO_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLO_Start__c</fullName>
        <label>COLO_Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLO_Technical__c</fullName>
        <label>COLO_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWS_Get__c</fullName>
        <label>CWS_Get</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWS_Pricing__c</fullName>
        <label>CWS_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWS_Sales__c</fullName>
        <label>CWS_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWS_Technical__c</fullName>
        <label>CWS_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Additional_Resources__c</fullName>
        <label>Campaign_Additional_Resources</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Get__c</fullName>
        <label>DE_Get</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Sales__c</fullName>
        <label>DE_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Technical__c</fullName>
        <label>DE_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPTT_Learn_SalesFleet__c</fullName>
        <label>EPTT_Learn_SalesFleet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPTT_Learn_Sales__c</fullName>
        <label>EPTT_Learn_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPTT_Learn_UseCases__c</fullName>
        <label>EPTT_Learn_UseCases</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPTT_Pricing__c</fullName>
        <label>EPTT_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPTT_Start__c</fullName>
        <label>EPTT_Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Learn_SalesFleet__c</fullName>
        <label>FS_Learn_SalesFleet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Learn_Sales__c</fullName>
        <label>FS_Learn_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Learn_TechnicalFleet__c</fullName>
        <label>FS_Learn_TechnicalFleet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Learn_Technical__c</fullName>
        <label>FS_Learn_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Pricing__c</fullName>
        <label>FS_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Start__c</fullName>
        <label>FS_Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexWareGet__c</fullName>
        <label>FlexWareGet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexWarePricing__c</fullName>
        <label>FlexWarePricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexWareSales__c</fullName>
        <label>FlexWareSales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexWareTechnical__c</fullName>
        <label>FlexWareTechnical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Started__c</fullName>
        <label>Get_Started</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_Guides__c</fullName>
        <label>Grow_Guides</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosting_Services__c</fullName>
        <label>Hosting_Services</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Pricing__c</fullName>
        <label>IA_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Resources_Sales__c</fullName>
        <label>IA_Resources_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Resources_Technical__c</fullName>
        <label>IA_Resources_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFR_Infographic__c</fullName>
        <label>IFR_Infographic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFR_Pricing__c</fullName>
        <label>IFR_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFR_Resources_Sales__c</fullName>
        <label>IFR_Resources_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFR_Resources_Technical__c</fullName>
        <label>IFR_Resources_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Assess__c</fullName>
        <label>IOT_Assess</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Learn_CC_Sales__c</fullName>
        <label>IOT_Learn_CC_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Learn_CC_Tech__c</fullName>
        <label>IOT_Learn_CC_Tech</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Learn_CV_Sales__c</fullName>
        <label>IOT_Learn_CV_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Learn_CV_Tech__c</fullName>
        <label>IOT_Learn_CV_Tech</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Learn_SC_Container__c</fullName>
        <label>IOT_Learn_SC_Container</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Learn_SC_PSale__c</fullName>
        <label>IOT_Learn_SC_PSale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Learn_SC_Retail2__c</fullName>
        <label>IOT_Learn_SC_Retail2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Learn_SC_Retail__c</fullName>
        <label>IOT_Learn_SC_Retail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Learn__c</fullName>
        <label>IOT_Learn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Pricing__c</fullName>
        <label>IOT_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_Start__c</fullName>
        <label>IOT_Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearMore_Training_HelpfulLinks__c</fullName>
        <label>LearMore_Training_HelpfulLinks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_EnablementPlaybook__c</fullName>
        <label>LearnMore_EnablementPlaybook</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_Equipment_Accessories__c</fullName>
        <label>LearnMore_Equipment_Accessories</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_Equipment_DevicePurchasing__c</fullName>
        <label>LearnMore_Equipment_DevicePurchasing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_Equipment_Devices__c</fullName>
        <label>LearnMore_Equipment_Devices</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_International_HelpfulLinks__c</fullName>
        <label>LearnMore_International_HelpfulLinks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_International_TalkText__c</fullName>
        <label>LearnMore_International_TalkText</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_International_Travel__c</fullName>
        <label>LearnMore_International_Travel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_Rateplans_BusinessConnect__c</fullName>
        <label>LearnMore_Rateplans_BusinessConnect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_Rateplans_BusinessPooled__c</fullName>
        <label>LearnMore_Rateplans_BusinessPooled</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_Rateplans_Individual__c</fullName>
        <label>LearnMore_Rateplans_Individual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_Rateplans_Pooling__c</fullName>
        <label>LearnMore_Rateplans_Pooling</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LearnMore_Rateplans_Sharing__c</fullName>
        <label>LearnMore_Rateplans_Sharing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_Get__c</fullName>
        <label>MIS_Get</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_Pricing__c</fullName>
        <label>MIS_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_Sales__c</fullName>
        <label>MIS_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_Technical__c</fullName>
        <label>MIS_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Services__c</fullName>
        <label>Mobile_Services</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBFW_Pricing__c</fullName>
        <label>NBFW_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBFW_Resources_Sales__c</fullName>
        <label>NBFW_Resources_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBFW_Resources_Technical__c</fullName>
        <label>NBFW_Resources_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetB_Get__c</fullName>
        <label>NetB_Get</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetB_Pricing__c</fullName>
        <label>NetB_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetB_Sales__c</fullName>
        <label>NetB_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Services__c</fullName>
        <label>Network_Services</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview_BreakingNews__c</fullName>
        <label>Overview_BreakingNews</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Additional_Resources__c</fullName>
        <label>Proposal_Additional_Resources</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEG_Get__c</fullName>
        <label>SEG_Get</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEG_Pricing__c</fullName>
        <label>SEG_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEG_Sales__c</fullName>
        <label>SEG_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEG_Technical__c</fullName>
        <label>SEG_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Enable__c</fullName>
        <label>Sales_Enable</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Resources__c</fullName>
        <label>Sales_Resources</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Helpful__c</fullName>
        <label>Start_Helpful</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Sales__c</fullName>
        <label>Start_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_UseCases__c</fullName>
        <label>Start_UseCases</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Information__c</fullName>
        <label>Technical_Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_Get__c</fullName>
        <label>WWAN_Get</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_Overview1__c</fullName>
        <label>WWAN_Overview1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_Overview2__c</fullName>
        <label>WWAN_Overview2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_Overview3__c</fullName>
        <label>WWAN_Overview3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_Pricing__c</fullName>
        <label>WWAN_Pricing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_SalesAccess__c</fullName>
        <label>WWAN_SalesAccess</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_SalesBusiness__c</fullName>
        <label>WWAN_SalesBusiness</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_SalesCommercial__c</fullName>
        <label>WWAN_SalesCommercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_Sales__c</fullName>
        <label>WWAN_Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_TechnicalAccess__c</fullName>
        <label>WWAN_TechnicalAccess</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_TechnicalBusiness__c</fullName>
        <label>WWAN_TechnicalBusiness</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_TechnicalCommercial__c</fullName>
        <label>WWAN_TechnicalCommercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWAN_Technical__c</fullName>
        <label>WWAN_Technical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>MobilitySection</label>
</CustomObject>